fixes for most of the integration tests - there's a few tests still failing, but this gets most of the classes functional